# aqua-log

./: index.html  package-lock.json  package.json  vite.config.ts
src/: classes.ts  main.ts  math.ts  uuid.ts
src-rust/: Cargo.toml
src-rust/sql/prod_initial/: 00-create-schema.sql
src-rust/src/: error.rs  main.rs
src-rust/src/database/: db.rs  mod.rs
src-rust/src/model/: mod.rs
src-rust/src/web/: mod.rs  routes_visits.rs
