[package]
name = "aqua-log"
version = "0.1.0"
edition = "2021"

[dependencies]
# -- Tokio
tokio = { version = "1.4", features = ["full"] }

# -- Web
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }

# -- Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# -- Data
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "time"] }

# -- Chrono
chrono = "0.4"